infrastructure/base/traefik/proxy-egress.network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-traefik-proxy-egress
  namespace: traefik-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.247.31/32
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.247.31/32
        toPorts:
          - ports:
              - port: "9090"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.245.43/32
        toPorts:
          - ports:
              - port: "80"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.247.33/32
        toPorts:
          - ports:
              - port: "18789"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.247.31/32
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.245.44/32
        toPorts:
          - ports:
              - port: "80"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.244.24/32
        toPorts:
          - ports:
              - port: "8006"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.244.1/32
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.245.39/32
        toPorts:
          - ports:
              - port: "80"
                protocol: TCP
