infrastructure/base/traefik/traefik.network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-traefik
  namespace: traefik-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    ingress:
      - fromEntities:
          - world
        toPorts:
          - ports:
              - port: "8000"
                protocol: TCP
              - port: "8443"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: tailscale
              tailscale.com/managed: "true"
        toPorts:
          - ports:
              - port: "8000"
                protocol: TCP
              - port: "8443"
                protocol: TCP
    egress:
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              app.kubernetes.io/name: hubble-ui
        toPorts:
          - ports:
              - port: "8081"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: guacamole-system
              app: guacamole-guacamole
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: proxer-system
              app: proxer
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.245.8/32
        toPorts:
          - ports:
              - port: "3902"
                protocol: TCP
              - port: "3909"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toCIDR:
          - 10.132.245.8/32
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: wg-easy-system
              app.kubernetes.io/name: wg-easy
        toPorts:
          - ports:
              - port: "51821"
                protocol: TCP
